--- a/selenium/package.json
+++ b/selenium/package.json
@@ -12,7 +12,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "mocha --reporter spec"
+    "test": "mocha --reporter spec --timeout 30000"
   },
   "author": "",
   "license": "ISC"
